<resources>
    <string name="app_name">Paris Weather</string>
    <string name="temperature_title">Temperature</string>
    <string name="feels_like_title">Feels Like</string>
    <string name="morning_text">Morning</string>
    <string name="afternoon_text">Afternoon</string>
    <string name="evening_text">Evening</string>
    <string name="night_text">Night</string>
    <string name="wind_title">Wind</string>
    <string name="pressure_title">Pressure</string>
    <string name="dew_point_value">Dew Point</string>
    <string name="humidity_title">Humidity</string>
    <string name="uv_title">UV Index</string>
    <string name="rain_title">Rain</string>
    <string name="sunrise_title">Sunrise</string>
    <string name="sunset_title">Sunset</string>
    <string name="error">Could not update weather.</string>
    <string name="refresh_title">Refresh</string>
</resources>
