<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.weather_detail.WeatherDetailActivity">
        <include
            layout="@layout/layout_daily_weather_item"
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/temperature_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/top_view"
            app:layout_constraintLeft_toLeftOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/temperature_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/temperature_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/feels_like_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feels_like_title"
                    android:textStyle="bold"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/morning_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning_text"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_title" />

                <TextView
                    android:id="@+id/afternoon_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon_text"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/morning_text" />
                <TextView
                    android:id="@+id/evening_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening_text"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/afternoon_text" />
                <TextView
                    android:id="@+id/night_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night_text"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/evening_text" />

                <TextView
                    android:id="@+id/morning_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/temperature_title"
                    app:layout_constraintRight_toRightOf="@+id/temperature_title"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_title" />

                <TextView
                    android:id="@+id/morning_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/feels_like_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/feels_like_title" />
                <TextView
                    android:id="@+id/afternoon_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/temperature_title"
                    app:layout_constraintRight_toRightOf="@+id/temperature_title"
                    app:layout_constraintTop_toBottomOf="@+id/morning_temperature" />

                <TextView
                    android:id="@+id/afternoon_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/feels_like_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/morning_feels_like" />
                <TextView
                    android:id="@+id/evening_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/temperature_title"
                    app:layout_constraintRight_toRightOf="@+id/temperature_title"
                    app:layout_constraintTop_toBottomOf="@+id/afternoon_temperature" />

                <TextView
                    android:id="@+id/evening_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/feels_like_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/afternoon_feels_like" />
                <TextView
                    android:id="@+id/night_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/temperature_title"
                    app:layout_constraintRight_toRightOf="@+id/temperature_title"
                    app:layout_constraintTop_toBottomOf="@+id/evening_temperature" />

                <TextView
                    android:id="@+id/night_feels_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/feels_like_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/evening_feels_like" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/details_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/temperature_view"
            app:layout_constraintLeft_toLeftOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:padding="16dp">
                <TextView
                    android:id="@+id/wind_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_title"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/wind_value"
                    app:layout_constraintRight_toRightOf="@+id/wind_value"/>
                <TextView
                    android:id="@+id/wind_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2m/s SSW"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/wind_title"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/pressure_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_title"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/pressure_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1024hPa"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pressure_title"/>
                <TextView
                    android:id="@+id/dew_point_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dew_point_value"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/dew_point_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/dew_point_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dew_point_title"/>

                <TextView
                    android:id="@+id/humidity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_title"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/wind_value"
                    app:layout_constraintRight_toRightOf="@+id/wind_value"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/humidity_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@+id/humidity_title"/>
                <TextView
                    android:id="@+id/uv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uv_title"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/pressure_value"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/uv_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/uv_title"
                    app:layout_constraintRight_toRightOf="@+id/uv_title"
                    app:layout_constraintTop_toBottomOf="@+id/uv_title"/>
                <TextView
                    android:id="@+id/rain_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rain_title"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/dew_point_value"
                    app:layout_constraintLeft_toLeftOf="@+id/dew_point_title"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/rain_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.99mm/h (60%)"
                    android:layout_marginTop="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/dew_point_title"
                    app:layout_constraintTop_toBottomOf="@+id/rain_title"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/details_view"
            app:layout_constraintLeft_toLeftOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:padding="16dp">
                <TextView
                    android:id="@+id/sunrise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_title"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/sunrise_value"
                    app:layout_constraintRight_toRightOf="@+id/sunrise_value"/>
                <TextView
                    android:id="@+id/sunrise_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6:17am"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/sunrise_title"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/sunset_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset_title"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/sunset_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="9:27pm"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="@+id/sunset_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sunset_title"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>